# routers/chat_routers.py
@@ -3,7 +3,6 @@ from flask_jwt_extended import jwt_required
 
 # Import authentication functions
 from handlers.chat_handlers.process_message import process_message_handler
-from handlers.chat_handlers.get_url import get_list_url_handler
 
 routers_chat = Blueprint('chat', __name__)
 
@@ -12,7 +11,3 @@ routers_chat = Blueprint('chat', __name__)
 def prrocess_message():
     return process_message_handler()
 
-@routers_chat.route('/chat/get_list_url', methods = ['GET'])
-@jwt_required()
-def get_url():
-    return get_list_url_handler()
